# tap-rest-api-post

./: .gitignore  LICENSE  README.md  config.sample.json  mypy.ini  pyproject.toml  setup.py  test_local.py  tox.ini
tap_rest_api_post/: __init__.py  auth.py  client.py  pagination.py  streams.py  tap.py
