[tool.poetry]
name = "tap-rest-api-post"
version = "0.1.0"
description = "A generic Meltano tap for REST APIs requiring POST requests, built with the Singer SDK."
authors = ["Kelvin Emwinghare <kelvinemwinghare43@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kelvine95/tap-rest-api-post"
repository = "https://github.com/kelvine95/tap-rest-api-post"
keywords = ["ELT", "Meltano", "Singer", "REST", "API", "tap"]

[tool.poetry.dependencies]
python = ">=3.8.1" # <-- This line has been updated
singer-sdk = "^0.40.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.4.2" # For code formatting
flake8 = "^7.0.0" # For code linting
mypy = "^1.8.0"   # For type checking

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# This section tells Meltano what command to run.
[tool.poetry.scripts]
tap-rest-api-post = 'tap_rest_api_post.tap:TapRestApiPost.cli'
